--- a/src/index.html
+++ b/src/index.html
@@ -11,21 +11,33 @@
     <meta property="og:image" content="">
     <meta property="og:site_name" content="Автошкола ОБД-Центр">
     <meta property="og:url" content="">
-     <!-- favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-     <!-- css only -->
+     <!-- Favicon -->
+     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
+     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
+     <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
+     <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
+     <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
+     <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
+     <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
+     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
+     <link rel="icon" type="image/png" sizes="192x192"  href="img/favicon/android-icon-192x192.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+     <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+     <link rel="manifest" href="img/favicon/manifest.json">
+     <meta name="msapplication-TileColor" content="#ffffff">
+     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+     <meta name="theme-color" content="#ffffff">
+     <!-- Css style -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- <link rel="stylesheet" href="css/all.css">
-    <link rel="stylesheet" href="css/brands.css"> -->
-    <!-- <link rel="stylesheet" href="css/fontawesome.min.css"> -->
     <link rel="stylesheet" href="css/style.min.css">
 </head>
-<!-- START MAIN -->
+<!-- Start main -->
 <body>
     <div class="banner">
         <div class="container">
@@ -84,7 +96,7 @@
                 </div>
                 <div class="col-xl-6 col-lg-6">
                     <div class="avto__img">
-                        <img src="img/driving.png" width="550" alt="images">
+                        <img src="img/driving.png" width="500" alt="images">
                     </div>
                 </div>
             </div>
@@ -133,20 +145,20 @@
         <div class="container">
             <h2 class="section-title">Этапы прохождения обучения</h2>
             <div class="row">
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 stages__box">
-                    <span class="stages__number"><i></i></span>
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 stages__box">
+                    <span class="stages__number">1</span>
                     <p class="stages__descr">Изучение теоретической части</p>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 stages__box">
-                    <span class="stages__number"><i></i></span>
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 stages__box">
+                    <span class="stages__number">2</span>
                     <p class="stages__descr">Вождение с инструктором</p>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 stages__box">
-                    <span class="stages__number"><i></i></span>
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 stages__box">
+                    <span class="stages__number">3</span>
                     <p class="stages__descr">Внутренний экзамен в автошколе</p>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 stages__box">
-                    <span class="stages__number"><i></i></span>
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 stages__box">
+                    <span class="stages__number">4</span>
                     <p class="stages__descr">Экзамен в ГРС в сопровождении автошколы</p>
                 </div>
             </div>
@@ -222,23 +234,24 @@
                         <div class="tab">
                             <input type="checkbox" id="chck2">
                             <label class="tab-label" for="chck2">Можно ли приостановить обучение?</label>
-                            <div class="tab-content">По разным обстоятельствам складываются так,  что запланированные мероприятия приходится откладывать или приостанавливать. Учеба в автошколе также в этом плане не является исключением. Бывает, что по тем или иным причинам ученику нужно прервать образовательный процесс. Это может быть, например, срочный отъезд по личным или рабочим делам, болезнь, отсутствие свободного времени, экзамены и т.д. Система курсов по вождению предполагает такую возможность., Но только на 1 месяц <br>
-                            Так, в ситуации, когда необходимо прервать обучение на водительские права, следует поставить в известность  администрацию учебного заведения и учебный процесс будет приостановлен <br>Возобновляя учебу, Вам придется посетить не хватающие до полного курса теоретические лекции вместе с другой группой и отзаниматься остаток практических часов с инструктором на площадке и в городе. Если Вас не было очень долго, нужно будет начать все сначала</div>
+                            <div class="tab-content tab-content-scroll"><p>По разным обстоятельствам складываются так,  что запланированные мероприятия приходится откладывать или приостанавливать. Учеба в автошколе также в этом плане не является исключением. Бывает, что по тем или иным причинам ученику нужно прервать образовательный процесс. Это может быть, например, срочный отъезд по личным или рабочим делам, болезнь, отсутствие свободного времени, экзамены и т.д. Система курсов по вождению предполагает такую возможность., Но только на 1 месяц <br>Так, в ситуации, когда необходимо прервать обучение на водительские права, следует поставить в известность  администрацию учебного заведения и учебный процесс будет приостановлен <br>
+                                Возобновляя учебу, Вам придется посетить не хватающие до полного курса теоретические лекции вместе с другой группой и отзаниматься остаток практических часов с инструктором на площадке и в городе. Если Вас не было очень долго, нужно будет начать все сначала</p>
+                           </div>
                         </div>
                         <div class="tab">
                             <input type="checkbox" id="chck3">
                             <label class="tab-label" for="chck3">Какие документы необходимы?</label>
-                            <div class="tab-content">Фото 3*4 2 шт Мед.справка 0.83У Копия паспорта</div>
+                            <div class="tab-content"><p>Фото 3*4 2 шт Мед.справка 0.83У Копия паспорта</p></div>
                         </div>
                         <div class="tab">
                             <input type="checkbox" id="chck4">
                             <label class="tab-label" for="chck4">Можно ли сократить или увеличить срок обучения?</label>
-                            <div class="tab-content">Сократить никак нельзя По учебному плану предусмотренные определенные сроки обучения на отдельные категории Продлить обучения можно только, если учащийся получил отсрочку по причине</div>
+                            <div class="tab-content"><p>Сократить никак нельзя По учебному плану предусмотренные определенные сроки обучения на отдельные категории Продлить обучения можно только, если учащийся получил отсрочку по причине</p></div>
                         </div>
                         <div class="tab">
                             <input type="checkbox" id="chck5">
                             <label class="tab-label" for="chck5">Когда начинается вождение?</label>
-                            <div class="tab-content">Практические занятия в Автошколе начинаются после четырех занятий теории. Потом процесс обучения идёт теория и практика параллельно</div>
+                            <div class="tab-content"><p>Практические занятия в Автошколе начинаются после четырех занятий теории. Потом процесс обучения идёт теория и практика параллельно</p></div>
                         </div>
                     </div>
                 </div>
@@ -251,7 +264,7 @@
             <div class="row">
                 <div class="col-12">
                         <h2 class="section-title">География присутствия</h2>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2923.8152596253512!2d74.59338221541131!3d42.876743279155654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389eb7dfb7209fa9%3A0xb5d910a040be5055!2z0J7RgdCe0J4gItCe0JHQlCDQptC10L3RgtGAIiAo0JDQstGC0L7RiNC60L7Qu9CwKQ!5e0!3m2!1sru!2skg!4v1649953978556!5m2!1sru!2skg" width="100%" height="400" style="border-radius: 16px; border: none;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2923.8152596253512!2d74.59338221541131!3d42.876743279155654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389eb7dfb7209fa9%3A0xb5d910a040be5055!2z0J7RgdCe0J4gItCe0JHQlCDQptC10L3RgtGAIiAo0JDQstGC0L7RiNC60L7Qu9CwKQ!5e0!3m2!1sru!2skg!4v1649953978556!5m2!1sru!2skg" width="100%" height="350" style="border-radius: 16px; border: none;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <div class="map__btn">
                         <a href="#application" class="btn-show-pulse">Записаться на обучение</a>
                     </div>
@@ -294,14 +307,12 @@
     <a href="#up" class="pageup">
         <i class="fas fa-chevron-circle-up"></i>
     </a>
+    <!-- End main -->
 
-    <!-- EBD MAIN -->
-
-    <!-- connections Script -->
+    <!-- Scripts -->
     <script src="plugins/jQuery/jquery-3.3.1.min.js"></script>
     <script src="plugins/jQuery/jquery-migrate-3.3.1.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <!-- <script src="js/fontawesome.min.js"></script> -->
     <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/script.js"></script>
 </body>
