--- a/src/tickets.html
+++ b/src/tickets.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Автошкола ОБД-Центр</title>
-    <!-- CSS only -->
+    <title>Автошкола ОБД-Центр Онлайн-тест</title>
+    <meta name="description" content="Автошкола ОБД-Центр в центре города Бишкек, по адресу пр. Чуй-215, (Пересекает Т.Молдо) «Автошкола» ведет свою деятельность с 2005 года Обучающий тест по Правилам Дорожного Движения Кыргызской Республики. 2022 год">
+    <meta name="keywords" content="ОБД-Центр, Автошкола, Автошкола ОБД-Центри Онлайн-тест, Автошкола Онлайн-тест Онлайн-тест пдд, Автошкола Бишкек, Автошкола Онлайн-тест. ОБД-Центр Онлайн-тест">
+    <meta property="og:title" content="ОБД-Центр Онлайн-тест">
+    <meta property="og:image" content="">
+    <meta property="og:site_name" content="Автошкола ОБД-Центр Онлайн-тес">
+    <meta property="og:url" content="">
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="img/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <!-- css style -->
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
@@ -14,7 +37,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="css/style.min.css">
 </head>
-<!-- START MAIN -->
+<!-- start ticets main -->
 <body class="body">
     <section class="tickets">
         <div class="container">
@@ -88,8 +111,9 @@
             </div>
         </div>
     </section>
+    <!-- end start ticets main -->
 
-    <!-- connections Script -->
+    <!-- scripts -->
     <script src="plugins/jQuery/jquery-3.3.1.min.js"></script>
     <script src="plugins/jQuery/jquery-migrate-3.3.1.js"></script>
     <script src="js/popper.min.js"></script>
