--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Автошкола ОБД-Центр</title>
@@ -29,10 +29,11 @@
      <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
      <meta name="theme-color" content="#ffffff">
      <!-- Css style -->
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <!-- <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/> -->
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="icons/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="css/style.min.css">
@@ -43,14 +44,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-4 col-mb-3">
-                    <a class="banner__inst" href="#"><i class="fab fa-instagram"></i></a>
-                    <a class="banner__what" href="#"><i class="fab fa-whatsapp"></i></a>
+                    <a class="banner__inst" href="#"><i class="bi bi-instagram"></i></a>
+                    <a class="banner__what" href="#"><i class="bi bi-whatsapp"></i></a>
                 </div>
                 <div class="col-4 col-mb-6">
                     <p class="banner__time">пн-пт 09:00 18:00, сб-вс 10:00 18:00</p>
                 </div>
                 <div class="col-4 col-mb-3">
-                    <p class="banner__address"><i class="fas fa-map-marker-alt"></i> г.Бишкек, ул. Чуй 215</p>
+                    <p class="banner__address"><i class="bi bi-geo-alt"></i>г.Бишкек, ул. Чуй 215</p>
                 </div>
             </div>
         </div>
@@ -71,7 +72,7 @@
                             </li>
                             <li class="nav-item"><a class="nav-link" href="#avtokg">О нас</a></li>
                             <li class="nav-item"><a class="nav-link" href="tickets.html">Онлайн-тест</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#faqs">Вопросы</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#faqs">Вопросы ?</a></li>
                             <li class="nav-item"><a class="nav-link" href="#footer">Контакты</a></li>
                         </ul>
                     </div>
@@ -279,10 +280,10 @@
                 <div class="col-xl-4 col-md-4">
                     <h1 class="footer__title">ОБД - Центр</h1>
                     <a class="footer__link" href="#">
-                        <i class="fab fa-instagram"></i>
+                        <i class="bi bi-instagram"></i>
                     </a>
                     <a class="footer__link" href="#">
-                        <i class="fab fa-whatsapp"></i>
+                        <i class="bi bi-whatsapp"></i>
                     </a>
                 </div>
                 <div class="col-xl-4 col-md-4">
@@ -305,7 +306,7 @@
     </footer>
 
     <a href="#up" class="pageup">
-        <i class="fas fa-chevron-circle-up"></i>
+        <i class="bi bi-arrow-up-square-fill"></i>
     </a>
     <!-- End main -->
 
