Update html file

--- a/src/index.html
+++ b/src/index.html
@@ -177,11 +177,11 @@
                         <p class="price__old">7 000</p>
                         <p class="price__summa">6 000 сом</p>
                         <hr>
-                        <li class="price__descr">Начало занятий в день обращения</li>
-                        <li class="price__descr">Начало занятий в день обращения</li>
-                        <li class="price__descr">Стандартный курс вождения в удобное для Вас время</li>
-                        <li class="price__descr">Бензин и учебная литература</li>
-                        <li class="price__descr">Оформление документов  для ГРС</li>
+                        <li class="price__descr">Изучения теоретические части</li>
+                        <li class="price__descr">Изучение первый медицинский помощь</li>
+                        <li class="price__descr">Изучение вождения</li>
+                        <li class="price__descr">Автошколный теоретические экзамены</li>
+                        <li class="price__descr">Экзамен на ГРС</li>
                         <a class="button__link button__link-price" href="#application">Записаться</a>
                     </div>
                 </div>
@@ -191,11 +191,12 @@
                         <p class="price__old">7 500</p>
                         <p class="price__summa">6 500 сом</p>
                         <hr>
-                        <li class="price__descr">Начало занятий в день обращения</li>
-                        <li class="price__descr">Начало занятий в день обращения</li>
-                        <li class="price__descr">Стандартный курс вождения в удобное для Вас время</li>
-                        <li class="price__descr">Бензин и учебная литература</li>
-                        <li class="price__descr">Оформление документов  для ГРС</p></li>
+                        <li class="price__descr">Изучения теоретические части</li>
+                        <li class="price__descr">Изучение первый медицинский помощь</li>
+                        <li class="price__descr">Изучение вождения</li>
+                        <li class="price__descr">Изучение машина устройство</li>
+                        <li class="price__descr">Автошколный теоретические экзамены</li>
+                        <li class="price__descr">Экзамен на ГРС</p></li>
                         <a class="button__link button__link-price" href="#application">Записаться</a>
                     </div>
                 </div>
