--- a/src/index.html
+++ b/src/index.html
@@ -177,11 +177,13 @@
                         <p class="price__old">7 000</p>
                         <p class="price__summa">6 000 сом</p>
                         <hr>
-                        <li class="price__descr">Изучения теоретические части</li>
-                        <li class="price__descr">Изучение первый медицинский помощь</li>
-                        <li class="price__descr">Изучение вождения</li>
-                        <li class="price__descr">Автошколный теоретические экзамены</li>
-                        <li class="price__descr">Экзамен на ГРС</li>
+                        <li class="price__descr">Изучение теоретической части</li>
+                        <li class="price__descr">Обучение первой помощи</li>
+                        <li class="price__descr">Обучение вождению</li>
+                        <li class="price__descr">Изучение машиного устройство</li>
+                        <li class="price__descr">Теоретические экзамены автошколы</li>
+                        <li class="price__descr">Экзамены по вождению в автошколе</li>
+                        <li class="price__descr">Экзамен для государственной регистрационной службы (ГРС)</li>
                         <a class="button__link button__link-price" href="#application">Записаться</a>
                     </div>
                 </div>
@@ -192,11 +194,12 @@
                         <p class="price__summa">6 500 сом</p>
                         <hr>
                         <li class="price__descr">Изучения теоретические части</li>
-                        <li class="price__descr">Изучение первый медицинский помощь</li>
-                        <li class="price__descr">Изучение вождения</li>
-                        <li class="price__descr">Изучение машина устройство</li>
-                        <li class="price__descr">Автошколный теоретические экзамены</li>
-                        <li class="price__descr">Экзамен на ГРС</p></li>
+                        <li class="price__descr">Обучение первой помощи</li>
+                        <li class="price__descr">Обучение вождению</li>
+                        <li class="price__descr">Изучение машиного устройство</li>
+                        <li class="price__descr">Теоретические экзамены автошколы</li>
+                        <li class="price__descr">Экзамены по вождению в автошколе</p></li>
+                        <li class="price__descr">Экзамен для государственной регистрационной службы (ГРС)</p></li>
                         <a class="button__link button__link-price" href="#application">Записаться</a>
                     </div>
                 </div>
