Update price file styles

--- a/src/index.html
+++ b/src/index.html
@@ -180,7 +180,6 @@
                         <li class="price__descr">Изучение теоретической части</li>
                         <li class="price__descr">Обучение первой помощи</li>
                         <li class="price__descr">Обучение вождению</li>
-                        <li class="price__descr">Изучение машиного устройство</li>
                         <li class="price__descr">Теоретические экзамены автошколы</li>
                         <li class="price__descr">Экзамены по вождению в автошколе</li>
                         <li class="price__descr">Экзамен для государственной регистрационной службы (ГРС)</li>
@@ -188,7 +187,7 @@
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6">
-                    <div class="price__bg price__bg-ofset">
+                    <div class="price__bg price__bg-mt price__bg-ofset">
                         <p class="price__category">Категория «ВC»</p>
                         <p class="price__old">7 500</p>
                         <p class="price__summa">6 500 сом</p>
