--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 </head>
 <!-- Start main -->
 <body>
-    <div class="banner">
+    <div class="banner" id="up">
         <div class="container">
             <div class="row">
                 <div class="col-4 col-mb-3">
@@ -58,7 +58,7 @@
 
     <header class="header" id="header">
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light shadow-sm" id="up">
+            <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo" width="65"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
