Updated link for smooth scrolling

--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
                     <form class="discount__form" id="discount__query-form" action="#">
                         <input  name="name" required placeholder="Ваше имя" type="text">
                         <input name="phone" required placeholder="Ваш номер телефона">
-                        <button class="button__link button__link-discount" type="submit">Записаться</button>
+                        <button class="button__link button__link-discount scroll" type="submit">Записаться</button>
                     </form>
                 </div>
             </div>
@@ -183,11 +183,11 @@
                         <li class="price__descr">Теоретические экзамены автошколы</li>
                         <li class="price__descr">Экзамены по вождению в автошколе</li>
                         <li class="price__descr">Экзамен для государственной регистрационной службы (ГРС)</li>
-                        <a class="button__link button__link-price" href="#application">Записаться</a>
+                        <a class="button__link button__link-price scroll" href="#application">Записаться</a>
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6">
-                    <div class="price__bg price__bg-mt price__bg-ofset">
+                    <div class="price__bg price__bg-ofset">
                         <p class="price__category">Категория «ВC»</p>
                         <p class="price__old">7 500</p>
                         <p class="price__summa">6 500 сом</p>
@@ -199,7 +199,7 @@
                         <li class="price__descr">Теоретические экзамены автошколы</li>
                         <li class="price__descr">Экзамены по вождению в автошколе</p></li>
                         <li class="price__descr">Экзамен для государственной регистрационной службы (ГРС)</p></li>
-                        <a class="button__link button__link-price" href="#application">Записаться</a>
+                        <a class="button__link button__link-price scroll" href="#application">Записаться</a>
                     </div>
                 </div>
             </div>
@@ -269,7 +269,7 @@
                         <h2 class="section-title">География присутствия</h2>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2923.8152596253512!2d74.59338221541131!3d42.876743279155654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389eb7dfb7209fa9%3A0xb5d910a040be5055!2z0J7RgdCe0J4gItCe0JHQlCDQptC10L3RgtGAIiAo0JDQstGC0L7RiNC60L7Qu9CwKQ!5e0!3m2!1sru!2skg!4v1649953978556!5m2!1sru!2skg" width="100%" height="350" style="border-radius: 16px; border: none;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <div class="map__btn">
-                        <a href="#application" class="btn-show-pulse">Записаться на обучение</a>
+                        <a href="#application" class="btn-show-pulse scroll">Записаться на обучение</a>
                     </div>
                 </div>
             </div>
@@ -317,6 +317,7 @@
     <script src="plugins/jQuery/jquery-migrate-3.3.1.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
+    <script src="js/scrollax.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
