--- a/src/index.html
+++ b/src/index.html
@@ -47,10 +47,10 @@
                     <a class="banner__what" href="#"><i class="bi bi-whatsapp"></i></a>
                 </div>
                 <div class="col-4 col-mb-6">
-                    <p class="banner__time">пн-пт 09:00 18:00, сб-вс 10:00 18:00</p>
+                    <p class="banner__time">пн-пт <b>09:00 18:00</b>, сб-вс <b>10:00 18:00</b></p>
                 </div>
                 <div class="col-4 col-mb-3">
-                    <p class="banner__address"><i class="bi bi-geo-alt"></i>г.Бишкек, ул. Чуй 215</p>
+                    <a href="https://go.2gis.com/spbvq" target="_blank" class="banner__address"><i class="bi bi-geo-alt"></i>г.Бишкек, ул. Чуй 215</a>
                 </div>
             </div>
         </div>
@@ -142,9 +142,9 @@
     </section>
 
     <section class="stages">
-        <div class="container">
+        <div class="container pl-0 pr-0">
             <h2 class="section-title">Этапы прохождения обучения</h2>
-            <div class="row">
+            <div class="row mr-1 ml-1 pl-0">
                 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 stages__box">
                     <span class="stages__number">1</span>
                     <p class="stages__descr">Изучение теоретической части</p>
@@ -168,10 +168,10 @@
     <section class="price" id="category">
         <div class="container">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 pl-0 pr-0">
                     <h2 class="section-title">Стоимость обучения</h2>
                 </div>
-                <div class="col-xl-6 col-lg-6 col-md-6">
+                <div class="col-xl-6 col-lg-6 col-md-6 price__pr">
                     <div class="price__bg price__bg-ofset">
                         <p class="price__category">Категория «В»</p>
                         <p class="price__old">7 000</p>
@@ -182,11 +182,11 @@
                         <li class="price__descr">Обучение вождению</li>
                         <li class="price__descr">Теоретические экзамены автошколы</li>
                         <li class="price__descr">Экзамены по вождению в автошколе</li>
-                        <li class="price__descr">Экзамен для государственной регистрационной службы (ГРС)</li>
+                        <li class="price__descr price__mb">Экзамен для государственной регистрационной службы (ГРС)</li>
                         <a class="button__link button__link-price scroll" href="#application">Записаться</a>
                     </div>
                 </div>
-                <div class="col-xl-6 col-lg-6 col-md-6">
+                <div class="col-xl-6 col-lg-6 col-md-6 price__pl">
                     <div class="price__bg price__bg-ofset">
                         <p class="price__category">Категория «ВC»</p>
                         <p class="price__old">7 500</p>
@@ -224,8 +224,8 @@
     </section>
 
     <section class="faq" id="faqs">
-        <div class="container">
-           <h2 class="section-title">Часто задаваемые вопросы:</h2>
+        <div class="container pl-0 pr-0">
+            <h2 class="section-title">Часто задаваемые вопросы:</h2>
             <div class="row">
             <div class="col">
                 <div class="tabs">
@@ -265,7 +265,7 @@
     <section class="map">
         <div class="container">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 pl-0 pr-0">
                         <h2 class="section-title">География присутствия</h2>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2923.8152596253512!2d74.59338221541131!3d42.876743279155654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389eb7dfb7209fa9%3A0xb5d910a040be5055!2z0J7RgdCe0J4gItCe0JHQlCDQptC10L3RgtGAIiAo0JDQstGC0L7RiNC60L7Qu9CwKQ!5e0!3m2!1sru!2skg!4v1649953978556!5m2!1sru!2skg" width="100%" height="350" style="border-radius: 16px; border: none;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <div class="map__btn">
@@ -278,8 +278,8 @@
 
     <footer class="footer" id="footer">
         <div class="container">
-            <div class="row">
-                <div class="col-xl-4 col-md-4">
+            <div class="row footer__px">
+                <div class="col-xl-4 col-md-4 pl-0">
                     <h1 class="footer__title">ОБД - Центр</h1>
                     <a class="footer__link" href="#">
                         <i class="bi bi-instagram"></i>
@@ -292,7 +292,7 @@
                     <h3 class="footer__contact">Наш адрес:</h3>
                     <p class="footer__descr">г. Бишкек пр Чуй-215 Пересекает ул. Т.Молдо, в здани Горного Института, ориентир кинотеатр «Россия»</p>
                 </div>
-                <div class="col-xl-4 col-md-4">
+                <div class="col-xl-4 col-md-4 pr-0">
                     <h3 class="footer__contact">Контактные телефоны:</h3>
                     <a class="footer__phone footer__mb" href="tel:996707228818">+996 707 22 88 18</a>
                     <a class="footer__phone" href="tel:996777712890">+996 777 71 28 90</a>
