--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width user-scalable=no">
     <title>Автошкола ОБД-Центр</title>
     <meta name="description" content="Автошкола ОБД-Центр в центре города Бишкек, по адресу пр. Чуй-215, (Пересекает Т.Молдо) «Автошкола» ведет свою деятельность с 2005 года">
     <meta name="keywords" content="ОБД-Центр, Автошкола, Автошкола Бишкек, Автошкола Онлайн-тест. ОБД-Центр Онлайн-тест">
@@ -171,7 +171,7 @@
                 <div class="col-12 pl-0 pr-0">
                     <h2 class="section-title">Стоимость обучения</h2>
                 </div>
-                <div class="col-xl-6 col-lg-6 col-md-6 price__pr">
+                <div class="col-xl-6 col-lg-6 col-md-6">
                     <div class="price__bg price__bg-ofset">
                         <p class="price__category">Категория «В»</p>
                         <p class="price__old">7 000</p>
@@ -186,7 +186,7 @@
                         <a class="button__link button__link-price scroll" href="#application">Записаться</a>
                     </div>
                 </div>
-                <div class="col-xl-6 col-lg-6 col-md-6 price__pl">
+                <div class="col-xl-6 col-lg-6 col-md-6">
                     <div class="price__bg price__bg-ofset">
                         <p class="price__category">Категория «ВC»</p>
                         <p class="price__old">7 500</p>
@@ -265,7 +265,7 @@
     <section class="map">
         <div class="container">
             <div class="row">
-                <div class="col-12 pl-0 pr-0">
+                <div class="col-12">
                         <h2 class="section-title">География присутствия</h2>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2923.8152596253512!2d74.59338221541131!3d42.876743279155654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389eb7dfb7209fa9%3A0xb5d910a040be5055!2z0J7RgdCe0J4gItCe0JHQlCDQptC10L3RgtGAIiAo0JDQstGC0L7RiNC60L7Qu9CwKQ!5e0!3m2!1sru!2skg!4v1649953978556!5m2!1sru!2skg" width="100%" height="350" style="border-radius: 16px; border: none;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <div class="map__btn">
@@ -279,7 +279,7 @@
     <footer class="footer" id="footer">
         <div class="container">
             <div class="row footer__px">
-                <div class="col-xl-4 col-md-4 pl-0">
+                <div class="col-xl-4 col-md-4">
                     <h1 class="footer__title">ОБД - Центр</h1>
                     <a class="footer__link" href="#">
                         <i class="bi bi-instagram"></i>
