Change media query price and faq

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
     </div>
 
     <header class="header" id="header">
-        <div class="container">
+        <div class="container pl-0 pr-0">
             <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo" width="65"></a>
@@ -69,7 +69,7 @@
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="#avtokg">О нас</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index.html">О нас</a></li>
                             <li class="nav-item"><a class="nav-link" href="tickets.html">Онлайн-тест</a></li>
                             <li class="nav-item"><a class="nav-link" href="#faqs">Вопросы ?</a></li>
                             <li class="nav-item"><a class="nav-link" href="#footer">Контакты</a></li>
@@ -82,7 +82,7 @@
     
     <div class="clearfix-header"></div> 
 
-    <section class="avto" id="avtokg">
+    <section class="avto">
         <div class="container">
             <div class="row">
                 <div class="col-xl- col-lg-6">
@@ -144,7 +144,7 @@
     <section class="stages">
         <div class="container pl-0 pr-0">
             <h2 class="section-title">Этапы прохождения обучения</h2>
-            <div class="row mr-1 ml-1 pl-0">
+            <div class="row mr-1 ml-1 pl-0 d-flex justify-content-center">
                 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 stages__box">
                     <span class="stages__number">1</span>
                     <p class="stages__descr">Изучение теоретической части</p>
@@ -166,9 +166,9 @@
     </section>
 
     <section class="price" id="category">
-        <div class="container">
+        <div class="container pl-0 pr-0">
             <div class="row">
-                <div class="col-12 pl-0 pr-0">
+                <div class="col-12">
                     <h2 class="section-title">Стоимость обучения</h2>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6">
@@ -278,7 +278,7 @@
 
     <footer class="footer" id="footer">
         <div class="container">
-            <div class="row footer__px">
+            <div class="row">
                 <div class="col-xl-4 col-md-4">
                     <h1 class="footer__title">ОБД - Центр</h1>
                     <a class="footer__link" href="#">
