When you click on the meni link, the background is removed and the faq style has changed

--- a/src/question.html
+++ b/src/question.html
@@ -48,6 +48,7 @@
                     <div class="row">
                         <div id="questTopButton" class="col-md-6 col-lg-6 col-sm-6 col-xs-6">
                             <div class="quest-start quest-start-mt">Перезапустить тест</div>
+                            <div class="quest-start quest-start-mt ml-3"><a href="index.html">Завершить</a></div>
                         </div>
                         <div id="timerBlock" class="col-md-6 col-lg-6 col-sm-6 col-xs-6" style="text-align:right; float: right;">
                             <span class="quest-timer">Ваши время 20:00</span>
