--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
      <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
      <link rel="manifest" href="img/favicon/manifest.json">
      <meta name="msapplication-TileColor" content="#ffffff">
-     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+     <meta name="msapplication -TileImage" content="/ms-icon-144x144.png">
      <meta name="theme-color" content="#ffffff">
      <!-- Css style -->
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
@@ -43,8 +43,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-4 col-mb-3">
-                    <a class="banner__inst" href="#"><i class="bi bi-instagram"></i></a>
-                    <a class="banner__what" href="#"><i class="bi bi-whatsapp"></i></a>
+                    <a class="banner__inst" href="https://www.instagram.com/obdcenter_kg/" target="_blank"><i class="bi bi-instagram"></i></a>
+                    <a class="banner__what" href="https://wa.me/0707228818?text=Здравствуйте%2C+у+меня+есть+вопрос" target="_blank"><i class="bi bi-whatsapp"></i></a>
                 </div>
                 <div class="col-4 col-mb-6">
                     <p class="banner__time">пн-пт <b>09:00 18:00</b>, сб-вс <b>10:00 18:00</b></p>
@@ -67,9 +67,9 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto pr-0 pl-0 mt-1 mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
+                                <a class="nav-link" aria-current="page" href="index.html">Главная</a>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="index.html">О нас</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#about">О нас</a></li>
                             <li class="nav-item"><a class="nav-link" href="tickets.html">Онлайн-тест</a></li>
                             <li class="nav-item"><a class="nav-link" href="#faqs">Вопросы ?</a></li>
                             <li class="nav-item"><a class="nav-link" href="#footer">Контакты</a></li>
@@ -82,7 +82,7 @@
     
     <div class="clearfix-header"></div> 
 
-    <section class="avto">
+    <section class="avto" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-xl- col-lg-6">
@@ -281,10 +281,10 @@
             <div class="row">
                 <div class="col-xl-4 col-md-4">
                     <h1 class="footer__title">ОБД - Центр</h1>
-                    <a class="footer__link" href="#">
+                    <a class="footer__link" href="https://www.instagram.com/obdcenter_kg/" target="_blank">
                         <i class="bi bi-instagram"></i>
                     </a>
-                    <a class="footer__link" href="#">
+                    <a class="footer__link" href="https://wa.me/0707228818?text=Здравствуйте%2C+у+меня+есть+вопрос" target="_blank">
                         <i class="bi bi-whatsapp"></i>
                     </a>
                 </div>
